WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287476
REGRESSION(
290146@main
): Broke non-GL video rendering
https://bugs.webkit.org/show_bug.cgi?id=287476
Summary
REGRESSION(290146@main): Broke non-GL video rendering
Philippe Normand
Reported
2025-02-11 03:17:52 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-02-11 03:22:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40409
EWS
Comment 2
2025-02-11 04:51:11 PST
Committed
290206@main
(ea905898dafa): <
https://commits.webkit.org/290206@main
> Reviewed commits have been landed. Closing PR #40409 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-11 04:52:17 PST
<
rdar://problem/144607622
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug