REGRESSION(290146@main): Broke non-GL video rendering https://bugs.webkit.org/show_bug.cgi?id=287476

Reviewed by Carlos Garcia Campos.

In 290146@main the notify::caps signal handler was moved to webKitVideoSinkSetMediaPlayerPrivate()
but the non-GL sink doesn't rely on that code, so we need another handler specific to the non-GL
sink.

The code responsible for filling the GstVideoInfo and DMABuf format from the video caps was also
moved to a new method that is called from the notify::caps callback and also potentially from
pushTextureToCompositor() in order to prevent race conditions between the video sink pad streaming
thread and the player rendering thread.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::updateVideoInfoFromCaps):
(WebCore::MediaPlayerPrivateGStreamer::videoSinkCapsChanged):
(WebCore::MediaPlayerPrivateGStreamer::pushTextureToCompositor):
(WebCore::MediaPlayerPrivateGStreamer::createVideoSink):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/290206@main