Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -1254,6 +1254,29 @@ bool MediaPlayerPrivateGStreamer::requiresVideoSinkCapsNotifications() const
     return player->isVideoPlayer();
 }
 
+#if USE(COORDINATED_GRAPHICS)
+void MediaPlayerPrivateGStreamer::updateVideoInfoFromCaps(GstCaps* caps)
+{
+#if USE(GBM) && GST_CHECK_VERSION(1, 24, 0)
+    GstVideoInfoDmaDrm drmVideoInfo;
+    gst_video_info_dma_drm_init(&drmVideoInfo);
+    if (gst_video_is_dma_drm_caps(caps)) {
+        if (!gst_video_info_dma_drm_from_caps(&drmVideoInfo, caps))
+            return;
+
+        if (!gst_video_info_dma_drm_to_video_info(&drmVideoInfo, &m_videoInfo))
+            return;
+
+        m_dmabufFormat = { drmVideoInfo.drm_fourcc, drmVideoInfo.drm_modifier };
+    }
+#endif // USE(GBM) && GST_CHECK_VERSION(1, 24, 0)
+    if (!m_dmabufFormat) {
+        if (!gst_video_info_from_caps(&m_videoInfo, caps))
+            return;
+    }
+}
+#endif // USE(COORDINATED_GRAPHICS)
+
 void MediaPlayerPrivateGStreamer::videoSinkCapsChanged(GstPad* videoSinkPad)
 {
     GRefPtr<GstCaps> caps = adoptGRef(gst_pad_get_current_caps(videoSinkPad));
@@ -1268,23 +1291,7 @@ void MediaPlayerPrivateGStreamer::videoSinkCapsChanged(GstPad* videoSinkPad)
     GST_DEBUG_OBJECT(videoSinkPad, "Received new caps: %" GST_PTR_FORMAT, caps.get());
 
 #if USE(COORDINATED_GRAPHICS)
-#if USE(GBM) && GST_CHECK_VERSION(1, 24, 0)
-    GstVideoInfoDmaDrm drmVideoInfo;
-    gst_video_info_dma_drm_init(&drmVideoInfo);
-    if (gst_video_is_dma_drm_caps(caps.get())) {
-        if (!gst_video_info_dma_drm_from_caps(&drmVideoInfo, caps.get()))
-            return;
-
-        if (!gst_video_info_dma_drm_to_video_info(&drmVideoInfo, &m_videoInfo))
-            return;
-
-        m_dmabufFormat = { drmVideoInfo.drm_fourcc, drmVideoInfo.drm_modifier };
-    }
-#endif // USE(GBM) && GST_CHECK_VERSION(1, 24, 0)
-    if (!m_dmabufFormat) {
-        if (!gst_video_info_from_caps(&m_videoInfo, caps.get()))
-            return;
-    }
+    updateVideoInfoFromCaps(caps.get());
 #endif // USE(COORDINATED_GRAPHICS)
 
     if (!hasFirstVideoSampleReachedSink()) {
@@ -3487,6 +3494,11 @@ void MediaPlayerPrivateGStreamer::pushTextureToCompositor(bool isDuplicateSample
     if (!isDuplicateSample)
         ++m_sampleCount;
 
+    if (!GST_VIDEO_INFO_FORMAT(&m_videoInfo)) {
+        auto caps = gst_sample_get_caps(m_sample.get());
+        updateVideoInfoFromCaps(caps);
+    }
+
     if (m_contentsBufferProxy->setDisplayBuffer(CoordinatedPlatformLayerBufferVideo::create(m_sample.get(), &m_videoInfo, m_dmabufFormat, m_videoDecoderPlatform, !m_isUsingFallbackVideoSink, m_textureMapperFlags))) {
         m_hasFirstVideoSampleBeenRendered = true;
         return;
@@ -4088,6 +4100,11 @@ GstElement* MediaPlayerPrivateGStreamer::createVideoSink()
             player->triggerRepaint(GRefPtr<GstSample>(sample));
         }), this);
         g_signal_connect_swapped(m_videoSink.get(), "repaint-cancelled", G_CALLBACK(repaintCancelledCallback), this);
+
+        auto pad = adoptGRef(gst_element_get_static_pad(m_videoSink.get(), "sink"));
+        g_signal_connect(pad.get(), "notify::caps", G_CALLBACK(+[](GstPad* videoSinkPad, GParamSpec*, MediaPlayerPrivateGStreamer* player) {
+            player->videoSinkCapsChanged(videoSinkPad);
+        }), this);
     }
 
     return m_videoSink.get();
